part-1/hola-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hola-svc
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 5678
