part-1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: 2048-game
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service-2048
          servicePort: 80
